feat: add getElephpantImageByName method
