# pkg/swagger/server/restapi/operations/elephpants/get_elephpant_image_responses.go
@@ -1,0 +1,106 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package elephpants
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+)
+
+// GetElephpantImageOKCode is the HTTP code returned for type GetElephpantImageOK
+const GetElephpantImageOKCode int = 200
+
+/*
+GetElephpantImageOK OK
+
+swagger:response getElephpantImageOK
+*/
+type GetElephpantImageOK struct {
+	/*
+
+	 */
+	AccessControlAllowOrigin string `json:"Access-Control-Allow-Origin"`
+}
+
+// NewGetElephpantImageOK creates GetElephpantImageOK with default headers values
+func NewGetElephpantImageOK() *GetElephpantImageOK {
+
+	return &GetElephpantImageOK{}
+}
+
+// WithAccessControlAllowOrigin adds the accessControlAllowOrigin to the get elephpant image o k response
+func (o *GetElephpantImageOK) WithAccessControlAllowOrigin(accessControlAllowOrigin string) *GetElephpantImageOK {
+	o.AccessControlAllowOrigin = accessControlAllowOrigin
+	return o
+}
+
+// SetAccessControlAllowOrigin sets the accessControlAllowOrigin to the get elephpant image o k response
+func (o *GetElephpantImageOK) SetAccessControlAllowOrigin(accessControlAllowOrigin string) {
+	o.AccessControlAllowOrigin = accessControlAllowOrigin
+}
+
+// WriteResponse to the client
+func (o *GetElephpantImageOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	// response header Access-Control-Allow-Origin
+
+	accessControlAllowOrigin := o.AccessControlAllowOrigin
+	if accessControlAllowOrigin != "" {
+		rw.Header().Set("Access-Control-Allow-Origin", accessControlAllowOrigin)
+	}
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(200)
+}
+
+// GetElephpantImageNotFoundCode is the HTTP code returned for type GetElephpantImageNotFound
+const GetElephpantImageNotFoundCode int = 404
+
+/*
+GetElephpantImageNotFound A elephpant with the specified Name was not found.
+
+swagger:response getElephpantImageNotFound
+*/
+type GetElephpantImageNotFound struct {
+	/*
+
+	 */
+	AccessControlAllowOrigin string `json:"Access-Control-Allow-Origin"`
+}
+
+// NewGetElephpantImageNotFound creates GetElephpantImageNotFound with default headers values
+func NewGetElephpantImageNotFound() *GetElephpantImageNotFound {
+
+	return &GetElephpantImageNotFound{}
+}
+
+// WithAccessControlAllowOrigin adds the accessControlAllowOrigin to the get elephpant image not found response
+func (o *GetElephpantImageNotFound) WithAccessControlAllowOrigin(accessControlAllowOrigin string) *GetElephpantImageNotFound {
+	o.AccessControlAllowOrigin = accessControlAllowOrigin
+	return o
+}
+
+// SetAccessControlAllowOrigin sets the accessControlAllowOrigin to the get elephpant image not found response
+func (o *GetElephpantImageNotFound) SetAccessControlAllowOrigin(accessControlAllowOrigin string) {
+	o.AccessControlAllowOrigin = accessControlAllowOrigin
+}
+
+// WriteResponse to the client
+func (o *GetElephpantImageNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	// response header Access-Control-Allow-Origin
+
+	accessControlAllowOrigin := o.AccessControlAllowOrigin
+	if accessControlAllowOrigin != "" {
+		rw.Header().Set("Access-Control-Allow-Origin", accessControlAllowOrigin)
+	}
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(404)
+}
